# nisaba

./: .gitignore  .release-plz.toml  CHANGELOG.md  Cargo.toml  README.md  deny.toml  dprint.json
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: check.yml  coverage.yml  databases.yml  function.yml  release.yml  scheduled.yml  security.yml  standard.yml  test.yml
assets/: promote_data.parquet
assets/csv/: albums.csv
assets/parquet/: album_images.parquet  albums.parquet  artist_album.parquet  artist_genre.parquet  artist_image.parquet  artists.parquet  available_markets.parquet  track_artist.parquet  tracks.parquet
assets/xlsx/: albums.xlsx
docs/: ROADMAP.md
examples/: basic.rs  multiple_sources.rs
scripts/: README.md  pyproject.toml  seed.py
src/: error.rs  lib.rs
src/analyzer/: calculation.rs  catalog.rs  conversion.rs  datastore.rs  inference.rs  mod.rs  probe.rs  report.rs  retriever.rs
src/analyzer/inference/: file.rs  mod.rs  nosql.rs  promote.rs  sql.rs
src/reconciler/: calculation.rs  datastore.rs  metrics.rs  mod.rs  promote.rs  reconcile.rs  report.rs  retriever.rs
src/reconciler/inference/: file.rs  mod.rs  nosql.rs  sql.rs
src/types/: field.rs  mod.rs  table.rs
supply-chain/: config.toml
