[package]
name = "nisaba"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

description = "Data quality, reconciliation, and validation across different data stores"
repository = "https://github.com/realonbebeto/nisaba"
keywords = [
    "dataframe",
    "schema-engine",
    "schema",
    "data-validation",
    "data-reconciliation",
    "data-quality",
]
authors = ["Bebeto Nyamwamu. (realonbebeto) <realonbbt@gmail.com>"]
categories = [
    "data-processing",
    "data-validation",
    "schema-management",
    "data-engineering",
    "data",
]

[dependencies]
anyhow = "1.0.100"
arrow = { version = "56.2.0", features = ["csv"], default-features = false }
calamine = { version = "0.32.0", default-features = false, features = [
    "chrono",
] }
chrono = { version = "0.4.42", default-features = false }
dirs = "6.0.0"
fastembed = "5.8.0"
futures = "0.3.31"
lancedb = { version = "0.23.0", default-features = false }
mongodb = { version = "3.4.1" }
nalgebra = "0.34.1"
parquet = { version = "56.2.0", default-features = false }
rand = { version = "0.9.2", features = ["std_rng"] }
rand_distr = "0.5.1"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "mysql",
    "sqlite",
    "chrono",
    "runtime-async-std-rustls",
] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", default-features = false, features = ["rt"] }
uuid = { version = "1.19.0", features = ["v7"], default-features = false }
