[package]
name = "nisaba"
version = "0.2.2"
edition = "2024"
license = "Apache-2.0"
documentation = "https://docs.rs/nisaba"
homepage = "https://github.com/realonbebeto/nisaba"
description = "Data quality, reconciliation, and validation across different data stores"
repository = "https://github.com/realonbebeto/nisaba"
keywords = [
    "arrow",
    "schema",
    "data-validation",
    "data-reconciliation",
    "data-quality",
]
authors = ["Bebeto Nyamwamu. (realonbebeto) <realonbbt@gmail.com>"]
categories = [
    "database",
    "database-implementations",
    "science",
    "data-structures",
]
readme = "README.md"

exclude = ["assets/*"]

[dependencies]
anyhow = { version = "1.0.100" }
arrow = { version = "58.0.0", features = ["csv"], default-features = false }
calamine = { version = "0.32.0", default-features = false, features = [
    "chrono",
] }
chrono = { version = "0.4.42", default-features = false }
dirs = { version = "6.0.0" }
fastembed = { version = "5.8.1" }
futures = { version = "0.3.31" }
graphrs = { version = "0.11.16" }
lancedb = { version = "0.23.0", default-features = false }
mongodb = { version = "3.4.1", features = ["sync"] }
nalgebra = "0.34.1"
parquet = { version = "56.2.0", default-features = false }
rand = { version = "0.9.2", features = ["std_rng"] }
rand_distr = { version = "0.5.1" }
rayon = { version = "1.11.0" }
sqlx = { version = "0.8.6", features = [
    "postgres",
    "mysql",
    "sqlite",
    "chrono",
    "runtime-tokio-native-tls",
] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", default-features = false, features = ["rt"] }
uuid = { version = "1.20.0", features = ["v7"], default-features = false }

[dev-dependencies]
tempfile = "3.24.0"


# for minimal-versions
[target.'cfg(any())'.dependencies]
openssl = { version = "0.10.55", optional = true }
