[package]
name = "nisaba"
version = "0.2.4"
edition = "2024"
license = "Apache-2.0"
documentation = "https://docs.rs/nisaba"
homepage = "https://github.com/realonbebeto/nisaba"
description = "Data quality, reconciliation, and validation across different data stores"
repository = "https://github.com/realonbebeto/nisaba"
keywords = [
    "arrow",
    "schema",
    "data-validation",
    "data-reconciliation",
    "data-quality",
]
authors = ["Bebeto Nyamwamu. (realonbebeto) <realonbbt@gmail.com>"]
categories = [
    "database",
    "database-implementations",
    "science",
    "data-structures",
]
readme = "README.md"

exclude = ["assets/*"]

[dependencies]
anyhow = { version = "1.0.102" }
arrow = { version = "57.2.0", features = ["csv"], default-features = false }
calamine = { version = "0.34.0", default-features = false, features = [
    "chrono",
] }
chrono = { version = "0.4.44", default-features = false }
dirs = { version = "6.0.0" }
fastembed = { version = "5.13.0" }
futures = { version = "0.3.32" }
lancedb = { version = "0.27.0", default-features = false }
mongodb = { version = "3.5.1", features = ["sync"] }
nalgebra = "0.34.1"
parquet = { version = "57.2.0", default-features = false, features = [
    "arrow",
    "snap",
    "zstd",
] }
rayon = { version = "1.11.0" }
sqlx = { version = "0.8.6", features = [
    "postgres",
    "mysql",
    "sqlite",
    "chrono",
    "runtime-tokio-native-tls",
] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", default-features = false, features = ["rt"] }
uuid = { version = "1.22.0", features = ["v7"], default-features = false }

[dev-dependencies]
tempfile = "3.27.0"


# for minimal-versions
[target.'cfg(any())'.dependencies]
openssl = { version = "0.10.76", optional = true }
